--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </div>
   </div>
   <button onclick="goStage()">Start</button>
+  <div style="position: absolute; bottom: 10px; right: 10px">
+    Source on <a href="https://github.com/OhBeomho/miroh">GitHub</a>
+  </div>
 
   <script src="./js/game.js"></script>
   <script>
